fix layout issues in product cards and update Tailwind breakpoints

--- a/src/style.css
+++ b/src/style.css
@@ -199,7 +199,7 @@ body {
   @apply cursor-pointer flex items-center gap-8 py-6 px-9 h-[100px] hover:shadow-[5px_8px_20px_0px_rgba(132,78,213,0.20)] hover:bg-white rounded-lg transition-all duration-200 ease-in-out;
 }
 .product-card {
-  @apply bg-white rounded-[20px] shadow-[0px_5px_20px_0px_rgba(132,78,213,0.08)] px-3 3xl:px-[14px] py-6 h-full flex flex-col justify-between relative overflow-hidden space-y-2 md:space-y-5;
+  @apply bg-white rounded-[20px] shadow-[0px_5px_20px_0px_rgba(132,78,213,0.08)] px-3 3xl:px-[14px] py-6 h-full flex flex-col justify-between relative overflow-hidden ;
 }
 .product-name {
   @apply text-exodusFruit text-xl sm:text-2xl 2xl:text-[26px] 3xl:text-3xl font-bold text-start md:text-center mb-2.5 leading-[130%] break-words;
@@ -220,8 +220,8 @@ body {
   @apply text-[11px] font-light text-lightblack leading-[218.182%];
 }
 .product-card-img {
-  @apply max-w-[98px] md:max-w-full md:max-h-[250px] max-h-[90px] h-full object-cover;
+  @apply max-w-[98px] md:max-w-full md:max-h-[250px] max-h-[90px] h-full object-center;
 }
 .only-with-us {
-  @apply text-xs leading-[66.667%] font-bold text-lightblack text-center absolute rotate-45 bg-schoolBus w-[167px] -right-[48px] left-[173px] py-2.5 drop-shadow-c1;
+  @apply text-xs leading-[66.667%] font-bold text-lightblack text-center absolute rotate-45 bg-schoolBus  md:py-2.5 py-1 drop-shadow-c1 !m-0 w-full z-10 3xl:top-[4.9%] xxl:top-[4%] md:top-[5%] sm:top-[9%] top-[18%] -right-[41%] sm:-right-[41%] lg:-right-[40%] md:-right-[42%] xxl:-right-[37%];
 }
